# NoorIPTV

./: .gitignore  ANDROID_INTEGRATION.md  CLAUDE.md  E2E_TESTS.md  INTEGRATION_GUIDE.md  PLAN.md  README.md  TODO.md  build.gradle  e2e-test.sh  gradle.properties  settings.gradle
.claude/projects/-Users-mamadousall-Documents-Perso-salliptv-projet/memory/: feedback_model_usage.md
.github/workflows/: build-apk.yml
app/: build.gradle  obfuscation-dictionary.txt  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  anti-debug.cpp  crypto-utils.cpp  native-lib.cpp  salliptv_secure.cpp
app/src/main/res/anim/: item_slide_in.xml  item_slide_out.xml  layout_animation_slide.xml
app/src/main/res/animator/: card_focus_animator.xml  loader_dot_pulse.xml
app/src/main/res/color/: btn_play_text.xml
app/src/main/res/drawable/: avd_aura_draw.xml  banner_aura.xml  bg_action_circle.xml  bg_action_focused.xml  bg_badge.xml  bg_badge_quality.xml  bg_badge_rating.xml  bg_button_white.xml  bg_card_focused.xml  bg_card_poster_focused.xml  bg_channel_row_focused.xml  bg_chip.xml  bg_chip_selected.xml  bg_detail_gradient.xml  bg_detail_hero_gradient.xml  bg_episode_card.xml  bg_glass_card.xml  bg_info_panel.xml  bg_live_badge.xml  bg_loader_dot.xml  bg_logo_rounded.xml  bg_mini_info.xml  bg_play_button.xml  bg_search_bar.xml  bg_settings_focused.xml  bg_settings_row.xml  bg_skip_intro.xml  bg_strip_item_focused.xml  bg_strip_item_playing.xml  bg_track_item.xml  bg_track_selected.xml  bg_trailer_button.xml  bg_transport_bar.xml  bg_up_next.xml  bg_vod_control.xml  bg_vod_play_button.xml  bg_vod_play_main.xml  gradient_bottom.xml  gradient_card_bottom.xml  gradient_card_poster_bottom.xml  (+23 more)
app/src/main/res/layout/: activity_category_detail.xml  activity_epg.xml  activity_filter.xml  activity_main.xml  activity_movie_detail.xml  activity_player.xml  activity_search.xml  activity_settings.xml  activity_splash.xml  item_category.xml  item_channel.xml  item_channel_list.xml  item_channel_poster.xml  item_channel_strip.xml  item_epg_channel.xml  item_epg_row.xml  item_episode.xml  item_filter.xml  item_filter_group.xml  item_home_card.xml  item_home_card_poster.xml  item_home_section.xml  item_overlay_channel.xml  item_playlist.xml  item_see_all.xml  item_see_all_live.xml  item_track.xml  view_premium_loader.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
backend/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  Dockerfile.worker  ROUTING.md  docker-compose.yml  requirements.txt
backend/app/: celery_app.py  main.py
backend/app/api/: epg.py  playlist.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py
backend/deploy/postgres/: init.sql  postgresql.conf
backend/deploy/redis/: redis.conf
backend/workers/: __init__.py  epg_worker.py  ml_worker.py  parse_worker.py  tmdb_enricher.py
(+73 files in other folders)
